# gmail_agent

./: .env.example  .gitignore  LLM_Extraction.py  RAID info.txt  README.md  et --hard HEAD~1  main.py  main1.py  pyproject.toml  test.py
src/: LLM_Extraction.py  Stella_messages.txt  actual_response.json  chat_manager.py  database.py  database_test.py  email_address.csv  gmail_utils.py  google-cloud-test.py  google_cloud.py  main.py  mainV2.py  sample_response.py
