[project]
name = "gmail-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses>=0.8",
    "dotenv>=0.9.9",
    "mcp[cli]>=1.13.1",
    "openai>=1.101.0",
    "requests>=2.32.5",
    "response>=0.5.0",
    "supabase>=2.18.1",
]
